--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,20 +1,21 @@
 #app {
 
   .main-container {
-    min-height: 100%;
+    min-height: calc(100%-2*#{$fixedHeadingHeight});
     transition: margin-left .28s;
-    margin-left: $sideBarWidth;
+    margin-left: #{$sideBarWidth};
     position: relative;
+    top: 2*$fixedHeadingHeight;
   }
 
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
     background-color: $menuBg;
-    height: 100%;
+    height: calc(100%-#{fixedHeadingHeight});
     position: fixed;
     font-size: 0px;
-    top: 0;
+    top:  $fixedHeadingHeight;
     bottom: 0;
     left: 0;
     z-index: 1001;
